@@ -8,7 +8,9 @@ version 0.4 (cvs)
 	- RFE #994716 Support for Server-side Groups to Aware Service
 	- RFE #1043848 Python wrappers
 	- Added support for Subjects and HTML messages to IM service ala
-	  NotesBuddy)
+	  NotesBuddy
+	- Added support for MIME messages (with image attachments) to IM
+	  service ala NotesBuddy
 
 	Bug Fixes
 	- Bug #1008335 Error in common.c when compiling on x86_64
